tests/samples/negative/control_flow/for_range_arity.ax
module for_range_arity;

fn main() -> i32 {
    for i in range() {
        return i;
    }
    return 0;
}
